# Electrostatic-field-simulator

./: CMakeLists.txt  README.md
dependencies/resources/: Punktladung.xlsx  Punktladung2.xlsx
dependencies/resources/Icon/: icon.rc
dependencies/vendors/raylib/include/: raymath.h
dependencies/vendors/raylib_imgui/: rlImGui.cpp  rlImGui.h
src/: ChargeSystem.cpp  ChargeSystem.h  GridSystem.cpp  GridSystem.h  InputSystem.cpp  InputSystem.h  RenderSystem.cpp  RenderSystem.h  main.cpp
